--- a/src/Components/HeaderComps/Header.css
+++ b/src/Components/HeaderComps/Header.css
@@ -3,6 +3,18 @@
 **********************/
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Secular+One&family=Source+Sans+Pro&display=swap');
 
+header .wrapper {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	/* border: orangered 2px solid; */
+}
+
+p {
+	font-family: 'Secular One', sans-serif;
+}
+
 .userName {
 	text-align: center;
 	font-family: 'Secular One', sans-serif;
@@ -16,13 +28,19 @@
 	font-size: 1.6rem;
 	display: flex;
 	text-transform: uppercase;
+	/* border: orangered 2px solid; */
 }
 
 .logoBox p {
-	font-family: 'Secular One', sans-serif;
 	font-size: 7px;
 	letter-spacing: 1.7px;
 	background-color: orangered;
+}
+
+.date {
+	font-family: 'Secular One', sans-serif;
+	font-size: 11px;
+	color: orangered;
 }
 
 .clock {
@@ -31,9 +49,17 @@
 	color: orangered;
 }
 
+.dateTimeBox {
+	display: flex;
+	flex-direction: column;
+}
+
 .logoClockBox {
 	display: flex;
 	justify-content: space-between;
+	padding-top: -2rem;
+	position: relative;
+	top: -2rem;
 }
 
 /*     font-family: 'Architects Daughter', cursive;
