Wip: Main section, currently working on styled accessible checkboxes. Done footer

--- a/src/Components/HeaderComps/Header.css
+++ b/src/Components/HeaderComps/Header.css
@@ -34,19 +34,22 @@ p {
 .logoBox p {
 	font-size: 7px;
 	letter-spacing: 1.7px;
-	background-color: orangered;
+	background-color: rgba(255, 68, 0, 0.7);
+	padding: 2px;
 }
 
 .date {
 	font-family: 'Secular One', sans-serif;
 	font-size: 11px;
-	color: orangered;
+	color: white;
+	background-color: rgba(255, 68, 0, 0.7);
+	padding: 2px;
 }
 
 .clock {
 	font-family: 'Secular One', sans-serif;
 	font-size: 1.5rem;
-	color: orangered;
+	color: white;
 }
 
 .dateTimeBox {
