Wip: checkbox and clearing completed tasks

--- a/src/Components/MainComps/Main.css
+++ b/src/Components/MainComps/Main.css
@@ -45,7 +45,11 @@ form button:active {
 }
 
 .checkbox {
-	position: absolute;
+	position: absolute !important;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+	clip: rect(1px, 1px, 1px, 1px);
 }
 
 .checkbox + .label {
@@ -62,8 +66,53 @@ form button:active {
 	width: 20px;
 	height: 20px;
 	background: #3b4371;
+	border: 1px solid #333;
 }
 
 .checkbox:checked + .label::before {
 	background: #3b4371;
+}
+
+.checkbox:checked + .label::after {
+	content: '';
+	position: absolute;
+	top: 20px;
+	left: 19px;
+	border-left: 2px solid #f3904f;
+	border-bottom: 2px solid #f3904f;
+	height: 6px;
+	width: 13px;
+	transform: rotate(-45deg);
+}
+
+.checkbox:focus + label::before {
+	outline: 1px solid #5d9dd5;
+	box-shadow: 0 0 8px #5e9ed6;
+}
+
+/* Animation cross off task */
+@keyframes strike {
+	0% {
+		width: 0;
+	}
+	100% {
+		width: 100%;
+	}
+}
+.strike {
+	position: relative;
+}
+.strike::after {
+	content: ' ';
+	position: absolute;
+	top: 50%;
+	left: 0;
+	width: 100%;
+	height: 1px;
+	background: black;
+	animation-name: strike;
+	animation-duration: 4s;
+	animation-timing-function: linear;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
 }
