--- a/src/Components/MainComps/Main.css
+++ b/src/Components/MainComps/Main.css
@@ -41,14 +41,42 @@ form button:active {
 	line-height: 1.6;
 	display: flex;
 	align-items: center;
+	box-shadow: 0px 2px 1.5px 0px rgb(59, 67, 113);
 }
 
 .label {
 	font-size: 2rem;
+	cursor: pointer;
 }
 
-.task.trashIcon {
-	font-size: 3rem;
+.taskComplete {
+	text-decoration: line-through;
+}
+
+.taskCompleteBox {
+	background-color: rgba(51, 51, 51, 0.2);
+}
+
+.trashIcon {
+	font-size: 1.2rem;
+	cursor: pointer;
+}
+
+.trashIcon:hover,
+.trashIcon:focus {
+	color: #e74c3c;
+}
+
+.delButton {
+	background: transparent;
+	border: none;
+}
+
+.nonVisual {
+	position: absolute;
+	width: 2px;
+	font-size: 1px;
+	color: transparent;
 }
 
 .checkbox {
