--- a/src/Components/OnLoadComps/OnLoad.css
+++ b/src/Components/OnLoadComps/OnLoad.css
@@ -21,16 +21,17 @@
 
 .onLoadLogoBox p {
 	font-size: 17.5px;
-	letter-spacing: 1.7px;
+	letter-spacing: 4px;
 	color: #f3904f;
 	background-color: white;
 	padding: 2px;
 }
 
 .fadeOut {
-	animation: fadeout 6s;
+	animation: fadeout 4s;
 	animation-fill-mode: forwards;
 	transition-timing-function: cubic-bezier(1, 0.03, 1, 0.54);
+	animation-delay: 2s;
 }
 
 @keyframes fadeout {
